--- a/Estructuras-Ciclicas/index3.html
+++ b/Estructuras-Ciclicas/index3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Los números positivos sonnd</p>
+    <p>Los números positivos son</p>
     <script src="Ejercicio3.js"></script>
 </body>
 </html>
