Reseteo de input solucionado

--- a/Reto2-Viajes/index.html
+++ b/Reto2-Viajes/index.html
@@ -16,9 +16,14 @@
             <h1 class="fs-1">
             <a class="navbar-brand fs-1" href="index.html">
             <img src="./images/logo.png" alt="" width="80" height="80" class="d-inline-block align-text-center">
-            <b> &nbsp Geo-Paises Geek</b>
+            <b> &nbsp Geo-Países Geek</b>
             </a>
-            </h1>
+            </h4>
+            <h4 class="fs-5 " >
+                <button id="citation_nav" class="align-text-center" >
+                    Citas
+                </button>
+            </h4>
             <div class="row">
                 <br/><br/>
                 <div class="col-md-12">
@@ -41,27 +46,27 @@
         <center><div class="container d-inline-flex" id="imagenes">
             <div id="africa" class="d-inline-block">
             <button href="" class="continente ">
-            <img src="./images/AFRICA.png" width="230" height="270" id="continente_africa">
+            <img src="./images/AFRICA.png" width="230px" height="270px" id="continente_africa">
             </button>
             </div>
             <div id="asia">
             <button href="" class="continente">
-            <img src="./images/ASIA.png" width="230" height="270" id="continente_asia">
+            <img src="./images/ASIA.png" width="230px" height="270" id="continente_asia">
             </button>
             </div>
             <div id="europa">
             <button href="" class="continente">
-            <img src="./images/EUROPA.png" width="230" height="270" id="continente_europa">
+            <img src="./images/EUROPA.png" width="230px" height="270" id="continente_europa">
             </button>
             </div>
             <div id="oceania">
             <button href="" class="continente">
-            <img src="./images/OCEANIA.png" width="230" height="270" id="continente_oceania">
+            <img src="./images/OCEANIA.png" width="230px" height="270" id="continente_oceania">
             </button>
             </div>
             <div id="america">
             <button href="" class="continente">
-            <img src="./images/AMERICA.png" width="230" height="270" id="continente_america">
+            <img src="./images/AMERICA.png" width="230px" height="270" id="continente_america">
             </button>
             </div>
         </div>
@@ -112,6 +117,15 @@
                     </form>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <button class="btn btn-outline-primary float-left" id="volverr" style="width: 7rem; display: inline-flex;"> Volver </button>
+        <button class="btn btn-outline-danger" id="delete_all" style="width: 7rem; float: right;"> Borrar todo </button>
+    </div>
+    <div class="container" id="content_citation">
+        <center><h4 id="citas_nav">Tus citas</h4></center> <br>
+        <div class="container " id="content_citation_nav"  >
         </div>
     </div>
     <br>
